Fixes visibility of logo in navigation bar

--- a/assets/scss/_partials/_nav.scss
+++ b/assets/scss/_partials/_nav.scss
@@ -13,7 +13,7 @@
     &.no-logo {
         .vector-container {
             opacity: 0;
-            visibility: none;
+            visibility: hidden;
         }
     }
     
